manuscripts/elife-55195/v1/manuscript_v1.md
# Ant collective cognition allows for efficient navigation through disordered environments

## Authors

- Aviram Gelblum<sup>1</sup>
- Ehud Fonio<sup>1</sup>
- Yoav Rodeh<sup>1</sup>
- Amos Korman<sup>1</sup> †
- Ofer Feinerman<sup>2</sup> ([ORCID: 0000-0003-4145-0238](https://orcid.org/0000-0003-4145-0238)) †

### Affiliations

1. Department of Physics of Complex Systems Weizmann Institute of Science Rehovot Israel
2. Department of Physics of Complex Systems Weizmann Institute of Science Rehobot Israel

† Corresponding author

## Abstract

The cognitive abilities of biological organisms only make sense in the context of their environment. Here, we study longhorn crazy ant collective navigation skills within the context of a semi-natural, randomized environment. Mapping this biological setting into the 'Ant-in-a-Labyrinth' framework which studies physical transport through disordered media allows us to formulate precise links between the statistics of environmental challenges and the ants' collective navigation abilities. We show that, in this environment, the ants use their numbers to collectively extend their sensing range. Although this extension is moderate, it nevertheless allows for extremely fast traversal times that overshadow known physical solutions to the 'Ant-in-a-Labyrinth' problem. To explain this large payoff, we use percolation theory and prove that whenever the labyrinth is solvable, a logarithmically small sensing range suffices for extreme speedup. Overall, our work demonstrates the potential advantages of group living and collective cognition in increasing a species' habitable range.
